# discord-bot

./: Cargo.toml  Dockerfile  README.md  flake.nix  shell.nix  temp.json
.github/workflows/: build-and-release.yml  build.yml  ci.yml  create_pkg.yml  create_release.yml  push_to_release.yml  release.yml  tag-to-release.yml  upload_asset.sh
docker/: Dockerfile
src/: args.rs  config.rs  main.rs  mensa_api.rs
src/apis/: meme_api.rs  mod.rs  uselessfact.rs
src/bot/: bot.rs  mod.rs
src/bot/commands/: commands.rs  mod.rs  uselessfact.rs
src/cli/: cli.rs  mod.rs
src/models/: location.rs  meal.rs  mod.rs
